bugfix: too much css param, break style

--- a/public/css/oifunding.css
+++ b/public/css/oifunding.css
@@ -588,11 +588,12 @@ option.oldrelease{
     border-radius: 4px;
     color: #FFFFFF;
     display: block;
-    font-size: 1.5em;
     font-weight: bold;
     margin: auto;
     padding: 0.3em;
     text-transform: uppercase;
+    position: relative;
+    z-index: 1;
 }
 .supportbtn {
     background: none repeat scroll 0 0 #0094B5;
@@ -605,6 +606,8 @@ option.oldrelease{
     padding: 0.3em;
     text-transform: uppercase;
     width: auto;
+    position: relative;
+    z-index: 1;
 }
 .bidaction {
     background: #2EAC66;
@@ -1004,7 +1007,7 @@ div.sepspecfooter {
     padding: 1%;
     position: absolute;
     right: 5%;
-    z-index: 1;
+    z-index: 2;
     width: 40%;
 }
 .reward_bottom_line{
@@ -1033,7 +1036,6 @@ div.sepspecfooter {
     z-index: 1;
 }
 .featuredetailspec {
-    background: none repeat scroll 0 0 white;
     text-align: start;
     position: relative;
     width:  65%;
@@ -1286,6 +1288,7 @@ body {
 }
 div.popup_spec {
     border-radius: 3px;
+    z-index: 1;
 }
 .actionbutton {
     background-color: #E3E3E3;
@@ -1313,6 +1316,7 @@ div.popup_spec {
 }
 .blur{
     background-color: #E3E3E3;
+    z-index: 1;
 }
 .backtoproject{
      width: 150%;
